2004-10-19  Damien Sandras  <dsandras@gnome.org>

	* NEWS: Updated with CVS News.

	* src/config.cpp, src/endpoint.cpp, src/endpoint.h, src/lid.cpp, 
	src/lid.cpp: Added back support for Quicknet hardware with
	GnomeMeeting dialpad animation when dialing from a POTS.

	* src/main_window.cpp, src/main_window.h: Added possibility to send
	DTMF and to dial IP's using the keypad, with corresponding animation
	in the GnomeMeeting dialpad.

	* src/urlhandler.cpp: Cleanup.

	* src/videograbber.cpp: Cleanup.

2004-10-16  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp: Do not set a max. width for ILS columns.

2004-10-16  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-remote.cpp: Fixed leak in previous commit.

2004-10-16  Damien Sandras  <dsandras@gnome.org>

	* lib/contacts/gm_contacts-remote.cpp: Fixed misplaced free.
	
2004-10-16  Damien Sandras  <dsandras@gnome.org>

	* src/addressbook_window.cpp: Made LDAP columns resizable.

2004-10-16  Damien Sandras  <dsandras@gnome.org>

	* src/calls_history_window.cpp, src/calls_history_window.h, 
	src/main_window.cpp: Only display the last 10 unique calls in the URL
	bar. Changed API so that the number of returned calls can be
	specified, with the fact that the list should only contain items with
	unique URLs or not.

2004-10-16  Damien Sandras  <dsandras@gnome.org>

	* src/common.h, src/gdkvideoio.cpp, src/main_window.cpp: Added
	"Side-By-Side" view to display remote and local video side-by-side.
	Fixes suggestion #131123.

2004-10-16  Damien Sandras  <dsandras@gnome.org>

	* src/urlhandler.cpp: Fixed locking issue thanks to Kilian and Daniel!

2004-10-16  Damien Sandras  <dsandras@gnome.org>

	* configure.in: Restored configure.in.

	* src/addressbook_window.cpp: Added back double-click on address book
	== refresh content. Make sure the statusbar is displayed when a new
	address book is added.

2004-10-16  Damien Sandras  <dsandras@gnome.org>
